refactor: refactor html,css,js

--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <header class="header" id="header">
+    <div class="wrapper" id="home">
+        <header class="header" >
             <div class="container">
                 <nav class="header__navigation">
                     <a class="logo" href="#" title="SINGOLO">SINGOLO<sup class="logo__star">*</sup></a>
 
                     <ul class="navigation">
-                        <li class="navigation__item"><a class="navigation__link navigation__link--current"
-                                href="#header" title="HOME">HOME</a></li>
+                        <li class="navigation__item"><a class="navigation__link"
+                                href="#home" title="HOME">HOME</a></li>
                         <li class="navigation__item"><a class="navigation__link" href="#services"
                                 title="SERVICES">SERVICES</a>
                         </li>
