feat: implement task

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
         <header class="header" >
             <div class="container">
                 <nav class="header__navigation">
+                    <button class="mobile-nav-btn">
+                        
+                        <span>
+Open/hide menu
+                        </span>
+                    </button>
                     <a class="logo" href="#" title="SINGOLO">SINGOLO<sup class="logo__star">*</sup></a>
 
                     <ul class="navigation">
@@ -42,6 +48,8 @@
                             <div class="slider__zone slider__zone--vertical">
                                 <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
                                     alt="iPhone Vertical">
+                                    <img class="slider__image slider__image--left slider__image--left slider__image--dark" src="./assets/images/phone-vertical-off.png"
+                                    alt="iPhone Vertical">
                                 <button class="slider__phone-button slider__phone-button--vertical">
                                     Turn on/off
                                 </button>
@@ -49,21 +57,36 @@
                             <div class="slider__zone slider__zone--horizontal">
                                 <img class="slider__image slider__image--right"
                                     src="./assets/images/phone-horizontal.png" alt="iPhone Horizontal">
-                                <button class="slider__phone-button slider__phone-button--hotizontal">
+                                <img class="slider__image slider__image--right slider__image--dark"
+                                    src="./assets/images/phone-horizontal-off.png" alt="iPhone Horizontal">
+                                <button class="slider__phone-button slider__phone-button--horizontal">
                                     Turn on/off
                                 </button>
                             </div>
                         </div>
                     </li>
                     <li class="slider__slide slider__slide--blue">
-                        <div class="slider__inner slider__inner--center container">
-                            <img class="slider__image slider__image--small-left"
-                                src="./assets/images/phone-vertical-small.png" alt="iPhone Vertical">
-                            <img class="slider__image slider__image--center" src="./assets/images/phone-vertical-2.png"
-                                alt="iPhone Vertical">
-                            <img class="slider__image slider__image--small-right"
-                                src="./assets/images/phone-vertical-small.png" alt="iPhone Vertical">
-                        </div>
+                        <div class="slider__inner container">
+                            <div class="slider__zone slider__zone--vertical">
+                                <img class="slider__image slider__image--left" src="./assets/images/phone-vertical.png"
+                                    alt="iPhone Vertical">
+                                    <img class="slider__image slider__image--left slider__image--left slider__image--dark" src="./assets/images/phone-vertical-off.png"
+                                    alt="iPhone Vertical">
+                                <button class="slider__phone-button slider__phone-button--vertical">
+                                    Turn on/off
+                                </button>
+                            </div>
+                            <div class="slider__zone slider__zone--horizontal">
+                                <img class="slider__image slider__image--right"
+                                    src="./assets/images/phone-horizontal.png" alt="iPhone Horizontal">
+                                <img class="slider__image slider__image--right slider__image--dark"
+                                    src="./assets/images/phone-horizontal-off.png" alt="iPhone Horizontal">
+                                <button class="slider__phone-button slider__phone-button--horizontal">
+                                    Turn on/off
+                                </button>
+                            </div>
+                            </div>
+                            
                     </li>
                 </ul>
                 <div class="slider__controls container">
